# serverless

./: README.md  demistomock.py  lambda_function.py  pyproject.toml
Packs/ApiModules/Scripts/DemistoClassApiModule/: DemistoClassApiModule.py
Packs/Base/Scripts/CommonServerPython/: CommonServerPython.py
Packs/CrowdStrikeFalcon/Integrations/CrowdStrikeFalcon/: CrowdStrikeFalcon.py
Packs/SplunkPy/Integrations/SplunkPy/: SplunkPy.py
Tests/demistomock/: demistomock.py
queryai/: demisto.py  demistomock.py  logging.py
