[tool.poetry]
name = "serverless"
version = "0.1.0"
description = ""
authors = ["Kyle Putnam <kyle@query.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
